--- a/Assignment7/bootstrap.css
+++ b/Assignment7/bootstrap.css
@@ -218,63 +218,63 @@ label {
   margin-bottom: 0.5rem;
 }
 
-button {
-  border-radius: 0;
-}
+/*button {*/
+  /*border-radius: 0;*/
+/*}*/
 
-button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-}
+/*button:focus {*/
+  /*outline: 1px dotted;*/
+  /*outline: 5px auto -webkit-focus-ring-color;*/
+/*}*/
 
-input,
-button,
-select,
-optgroup,
-textarea {
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
+/*input,*/
+/*button,*/
+/*select,*/
+/*optgroup,*/
+/*textarea {*/
+  /*margin: 0;*/
+  /*font-family: inherit;*/
+  /*font-size: inherit;*/
+  /*line-height: inherit;*/
+/*}*/
 
-button,
-input {
-  overflow: visible;
-}
+/*button,*/
+/*input {*/
+  /*overflow: visible;*/
+/*}*/
 
-button,
-select {
-  text-transform: none;
-}
+/*button,*/
+/*select {*/
+  /*text-transform: none;*/
+/*}*/
 
-button,
-html [type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
+/*button,*/
+/*html [type="button"],*/
+/*[type="reset"],*/
+/*[type="submit"] {*/
+  /*-webkit-appearance: button;*/
+/*}*/
 
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  padding: 0;
-  border-style: none;
-}
+/*button::-moz-focus-inner,*/
+/*[type="button"]::-moz-focus-inner,*/
+/*[type="reset"]::-moz-focus-inner,*/
+/*[type="submit"]::-moz-focus-inner {*/
+  /*padding: 0;*/
+  /*border-style: none;*/
+/*}*/
 
-input[type="radio"],
-input[type="checkbox"] {
-  box-sizing: border-box;
-  padding: 0;
-}
+/*input[type="radio"],*/
+/*input[type="checkbox"] {*/
+  /*box-sizing: border-box;*/
+  /*padding: 0;*/
+/*}*/
 
-input[type="date"],
-input[type="time"],
-input[type="datetime-local"],
-input[type="month"] {
-  -webkit-appearance: listbox;
-}
+/*input[type="date"],*/
+/*input[type="time"],*/
+/*input[type="datetime-local"],*/
+/*input[type="month"] {*/
+  /*-webkit-appearance: listbox;*/
+/*}*/
 
 textarea {
   overflow: auto;
