added assignment6 because I had it as assignment 7

--- a/assignment_6/styles.css
+++ b/assignment_6/styles.css
@@ -166,3 +166,12 @@ a {
     border-width: 1px;
     border-color: #4e555b;
 }
+
+/*#allProducts {*/
+    /*display: inline; !important;*/
+/*}*/
+
+/*#imageLocation {*/
+    /*display: inline; !important;*/
+
+}
